test/functions/vass/resolution/need-missing-return-error-2.chpl

funfun();
compilerError("done"); // no need to compile further

proc funfun(): uint(8) {
  writeln();
}
